--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -15,5 +15,6 @@ $l-size: 3.2rem;
 $xl-size: 4.6rem;
 $xxl-size: 10rem;
 $img-size: 20rem;
+$mobile-img-size: 10rem;
 $img-height: 50rem;
-$desktop-breakpoint: 45rem;
+$mobile-version: 60rem;
